# crypto-analyser

./: .env.example  .gitignore  .rgignore  AGENTS.md  CONTEXT.md  DESIGN.md  README.md  docker-compose.test.yml  docker-compose.yml  generate_embeddings.py  init_db.sh  load_archiv.py  migration_emb.sql  pyproject.toml  schema.md  test_api.py
.github/workflows/: ci.yml  pages.yml
.pi/extensions/: opencode-skills.ts
.sisyphus/: PROJECT.md  TASKS
.sisyphus/drafts/: crypto-analyzer-phase1.md
.sisyphus/evidence/: task-0.3-hybrid-query.txt  task-0.3-pgvector-start.txt  task-0.3-versions.txt  task-13-index-embedding.txt  task-13-index-pubdate.txt  task-13-index-textsearch.txt  task-13-index-tickers.txt  task-13.5-demo-error.txt  task-13.5-demo-perf.txt  task-13.5-demo-run.txt  task-14-zscore-config.txt  task-14-zscore-luna.txt  task-15-derivatives-context.txt  task-16-luna-retrieval.txt  task-16-ticker-filter.txt  task-16-time-bound.txt  task-17-schema-validation.txt  task-18-classifier-output.txt  task-18-schema-error.txt  task-19-report-generation.txt  task-2-data-structure.txt  task-2-duckdb-test.txt  task-20-anomaly-count.txt  task-20-luna-pipeline.txt  task-21-derivatives-ablation.txt  task-22-rag-ablation.txt  task-23-ragas-comparison.txt  task-24-final-summary.txt  task-24-json-valid.txt  task-3-docker-validate.txt  task-4-config-load.txt  task-5-llm-placeholder.txt  task-6-logging.txt  task-7-ohlcv-download.txt  task-7-ohlcv-url.txt  task-8-funding-download.txt  task-8-funding-url.txt  task-9-oi-download.txt  (+1 more)
config/: .gitignore  settings.yaml
data/: .gitignore
docs/: demo-guide.md  index.md  indexes.md  retrieval.md  schema.md  storage.md
news_data/: schema.md  schema.sql
poc_binance_api/: .gitignore  README.md  main.py  pyproject.toml
prompts/: classification_prompt.md
reports/: .gitignore  FINAL_PHASE1_SUMMARY.json
results/: ablation_comparison.json  ablation_derivatives_only.json  ablation_derivatives_rag.json  ablation_news_only.json
schemas/: classification.json
scripts/: build_visual_data.py  demo_retrieval.py  download_funding.py  download_ohlcv.py  download_oi.py  evaluate_ragas.py  generate_embeddings.py  init_db.sh  load_archiv.py  load_archive.py  run_pipeline.py  test_retrieval.py
sql/: indexes.sql  migration_emb.sql  news_schema.sql  schema.sql
src/: retrieval.py  zscore.py
tests/: test_architecture.py  test_archive_loader.py  test_assets.py  test_classification_modes.py  test_cli.py  test_database.py  test_derivatives.py  test_downloaders.py  test_embeddings.py  test_evaluation.py  test_llm_client.py  test_pipeline.py  test_report_isolation.py  test_retrieval.py  test_retrieval_integration.py  test_visuals.py  test_zscore.py
visuals/: index.html  luna_news_sources.json  template.html
(+52 files in other folders)
