[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-analyser"
version = "0.1.0"
description = "Historical crypto anomaly detection using derivatives market structure (funding rates, open interest)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "pyarrow>=18.0",
    "pandas>=2.2",
    "requests>=2.32",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9",
    "pgvector>=0.4",
    "langfuse>=2.0",
    "ragas>=0.4,<0.5",
    "openai>=1,<3",
    "langchain-community<0.4",
]

[project.scripts]
crypto-analyser = "crypto_analyser.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
crypto_analyser = ["assets/*"]



[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]



[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.8",
]
